# rov-topside

./: .gitignore  Dockerfile  HANDOFF.md  README.md  cyclonedds_topside.xml  docker-compose.yml  docker-entrypoint.sh  spec.md  start-docker.sh  start.sh  stop-docker.sh  stop.sh
src/rov_dashboard/: package.xml  setup.py
src/rov_joystick/: package.xml  setup.cfg  setup.py
src/rov_photogrammetry/: package.xml  setup.cfg  setup.py
src/rov_topside/: README.md  package.xml  setup.cfg  setup.py
src/rov_topside/launch/: topside.launch.py
src/rov_topside/rov_topside/: dashboard.py  joy_publisher.py  photogrammetry_saver.py
src/rov_topside/rov_topside/web_dashboard/: server.py
src/rov_topside/rov_topside/web_dashboard/static/: index.html
src/rov_topside/scripts/: build.sh  capture.sh  start_dashboard.sh  start_joy.sh  start_topside.sh
