<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_dashboard</name>
  <version>0.1.0</version>
  <description>Web-based dashboard server (HTTP + WebSocket) for ROV topside</description>
  <maintainer email="mahkgamer@gmail.com">ahmad</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
