<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_joystick</name>
  <version>0.1.0</version>
  <description>DS4 joystick publisher (evdev-based) for ROV topside</description>
  <maintainer email="mahkgamer@gmail.com">ahmad</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
